--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
   <meta name="description" content="" />
 
-  <link rel="icon" href="img/favicon.png">
+  <!-- <link rel="icon" href="img/favicon.png"> -->
 
   <link rel="stylesheet" href="style.css">
 
