Added NavBar CSS - Incomplete

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,27 @@
 
 </head>
 <body>
+<!-- <div class="modal">
+  content
+</div> -->
+
   <div class="grid-container">
     <div class="header"></div>
-    <div class="nav-bar"></div>
+
+    <div class = "nav-bar">  
+
+      <div class = "nav-title"> 
+        <h3>FLASHCARDS</h3>     
+        <h3>HOME</h3>
+        <h3>APPS</h3>
+      </div>    
+      <div id = "nav-toggle"> </div>
+      <div id = "nav-line"> </div>  
+  
+    
+    </div>
+
+
     <div class="studbud-bar"></div>
     <div class="pomodoro-timer"></div>
     <div class="progress-bar"></div>
@@ -76,7 +94,7 @@
           
        <!-- task grid div              -->
       </div>
-<!-- kanban board div -->
+  <!-- kanban board div -->
     </div>
   <!-- Grid containter div -->
   </div>
